<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_regist_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">
    <RelativeLayout
        android:id="@+id/rl_regist_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:elevation="2dp">


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="填写验证码"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:src="@drawable/back_out_white" />

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_teap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smssdk_teap"
        android:gravity="start"
        android:padding="10dp"

        android:layout_below="@+id/rl_regist_title"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:layout_below="@+id/tv_teap"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/smssdk_hint"
            android:padding="10dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e9e4e4"/>
        <TextView
            android:id="@+id/tv_recover_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/smssdk_recover_send"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/smssdk_next"
        android:layout_below="@+id/ll_2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorAccent"
        />
</RelativeLayout>
