<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:orientation="vertical">
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/content_tv"
        android:background="#ddd" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">



        <LinearLayout
            android:id="@+id/btn_seller"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_seller"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/main_index_seller_pressed" />

            <TextView
                android:id="@+id/tv_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab1"
                android:textColor="@color/main_bottom_textcolor_normal"
                android:textSize="13sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_notice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_notice"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/main_bottom_notice" />

            <TextView
                android:id="@+id/tv_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab2"
                android:textColor="@color/main_bottom_textcolor_normal"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_order"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/main_bottom_order" />

            <TextView
                android:id="@+id/tv_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab3"
                android:textColor="@color/main_bottom_textcolor_normal"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/main_bottom_more" />

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab4"
                android:textColor="@color/main_bottom_textcolor_normal"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>